--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,10 +5,10 @@
 }
 
 :root {
-    --primary-color: #14396c;
-    --secondary-color: #e48d45;
-    --accent1-color: #242724;
-    --accent2-color: #f8f88a;
+    --primary-color: #293c86;
+    --secondary-color: #61e5f4;
+    --accent1-color: #2b5326;
+    --accent2-color: #e9c46a;
     --heading-font: "Anton", "Georgia", serif;
     --body-font: Arial, Helvetica, sans-serif;
 }
