--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,7 +6,7 @@
 
 :root {
     --primary-color: #293c86;
-    --secondary-color: #61e5f4;
+    --secondary-color: #090758;
     --accent1-color: #2b5326;
     --accent2-color: #574004;
     --heading-font: "Anton", "Georgia", serif;
