--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,17 +7,21 @@
 nav {
     background-color: darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
-    display: inline-block;
+    display: block;
     padding: 10px;
 }
 
 h1 {
     color: black;
     padding: 10px;
+    border-bottom: 2px solid black;
 }
 
 main img {
@@ -31,10 +35,6 @@ main img {
 
 p {
     padding: 10px;
-}
-
-main {
-    max-width: 840px;
 }
 
 aside {
@@ -67,4 +67,17 @@ footer {
     background-color: lightgrey;
     color: black;
     width: 20rem;
+}
+
+header,
+footer,
+.grid {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 1rem;
 }
