--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,8 +14,14 @@
 }
 
 header {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
     background-color: rgb(255, 255, 255);
     color: var(--accent2-color);
+    width: 840px;
+    margin: 0 auto;
+    padding: 1rem;
 }
 
 body {
@@ -51,10 +57,15 @@ article {
     text-decoration: none;
 }
 
+nav {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 nav a {
     color: black;
-    display: block;
-    padding: 5px;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .hero {
@@ -67,7 +78,7 @@ nav a {
     height: auto;
 }
 
-h1 {
+.hero h1 {
     position: absolute;
     top: 25px;
     width: 100%;
@@ -98,4 +109,51 @@ h1 {
     width: 40px;
     height: auto;
     margin: 0 8px;
+}
+
+header img {
+    width: 120px;
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    gap: 1rem;
+    align-items: center;
+}
+
+.history img {
+    width: 100%;
+}
+
+.history h2 {
+    grid-column: 1 / -1;
+}
+
+.adventure-images {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.adventure-images figure {
+    text-align: center;
+}
+
+.adventure-images img {
+    width: 100%;
+    max-width: 150px;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 840px;
+    margin: 0 auto;
+}
+
+.socialmedia {
+    display: flex;
+    gap: 1rem;
 }
